fixing an issue with the of canvas content overflowing the total off canvas height

--- a/src/blocks/header/children/off-canvas/editor.scss
+++ b/src/blocks/header/children/off-canvas/editor.scss
@@ -24,6 +24,7 @@
 		height: 100%;
 		display: flex;
 		flex-direction: column;
+		box-sizing: border-box;
 
 		.kt-close-position-inside {
 			position: relative;
