--- a/src/blocks/header/children/off-canvas/style.scss
+++ b/src/blocks/header/children/off-canvas/style.scss
@@ -27,6 +27,7 @@ $admin-bar-height-mobile: 46px;
 		height: 100%;
 		display: flex;
 		flex-direction: column;
+		box-sizing: border-box;
 	}
 
 	&.active {
